# Giraffe-Language

./: .gitignore  LICENSE  README.md  TODO.md  app.gfe  ast  tree
GiraffeAST/: Cargo.toml
GiraffeAST/src/: lib.rs
GiraffeError/: Cargo.toml
GiraffeError/src/: lib.rs
GiraffeIO/: Cargo.toml
GiraffeInterpreter/: Cargo.toml
GiraffeInterpreter/src/: lib.rs  main.rs
GiraffeLanguage/: Cargo.toml
GiraffeLanguage/src/: main.rs
GiraffeLexer/: Cargo.toml
GiraffeLexer/src/: lib.rs  main.rs
GiraffeParser/: Cargo.toml
GiraffeParser/src/: lib.rs  main.rs
GiraffeVariablesStorage/: Cargo.toml
GiraffeVariablesStorage/src/: lib.rs  main.rs
documentation/: ast.md  interpreter.md  lexer.md  parser.md  state_storage.md  variables_storage.md
examples/: app.gfe  bubble.gfe  list_methods.gfe
