[package]
name = "GiraffeLanguage"
version = "1.2.0"
edition = "2021"

[dependencies]
GiraffeInterpreter ={ path = "../GiraffeInterpreter"}
GiraffeLexer = { path = "../GiraffeLexer" }
GiraffeAST = { path = "../GiraffeAST"}
GiraffeParser ={ path = "../GiraffeParser"}
GiraffeError = { path = "../GiraffeError"}
colored = "2.0"